<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mFavorito"
        android:icon="@drawable/fivestars"
        android:orderInCategory="10"
        android:title="star"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/mAbout"
        android:orderInCategory="30"
        android:title="@string/menu_about"></item>
    <item
        android:id="@+id/mContact"
        android:orderInCategory="20"
        android:title="@string/menu_contact"></item>
    <item
        android:id="@+id/mConfigurarCuenta"
        android:orderInCategory="20"
        android:title="@string/menu_configurar_cuenta"></item>
    <item
        android:id="@+id/mRecibirNotificacion"
        android:orderInCategory="20"
        android:title="@string/menu_recibir_notificacion"></item>
</menu>
